--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REDIS_URI=redis://redistogo:f99edf3de0cyryty324fe462@sole.redistogo.com:10393/
+REDIS_URI=redis://redistogo:48be0e6680931b71ee9ef66cdb524181@scat.redistogo.com:10400/
 PYTHON_ENV=prod
 CACHE_EXPIRATION=180
